<resources>
    <string name="pull_to_refresh_pull_down_label">下拉刷新</string>
    <string name="pull_to_refresh_release_down_label">释放更新</string>
    <string name="pull_to_refresh_refreshing_down_label">正在刷新…</string>
    <string name="pull_to_refresh_pull_up_label">上拉查看更多</string>
    <string name="pull_to_refresh_release_up_label">释放加载更多</string>
    <string name="pull_to_refresh_refreshing_up_label">正在加载…</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="app_name">华农宝</string>
    <string name="hint_username">请输入学号</string>
    <string name="hint_edusyspassword">请输入教务系统密码</string>
    <string name="hint_libpassword">请输入图书馆密码(默认为001)</string>
    <string name="hint_cardpassword">请输入校园卡查询密码(默认为校园卡卡号)</string>
    <string name="btn_save">保存设置</string>
    <string name="save_input_tips_username">请输入用户名</string>
    <string name="save_input_tips_password">两个密码必须输入一个</string>
    <string name="menu_classtable">课程表</string>
    <string name="menu_goal">查询成绩</string>
    <string name="menu_exam">考试安排</string>
    <string name="menu_pickCourseInfo">选课情况</string>
    <string name="btn_publicCourse">公共选修课查询</string>
    <string name="menu_emptyClassRoom">空余课室</string>
    <string name="tips_classtable_null">嗯..竟然找不到你的课程表</string>
    <string name="tips_username_error">抱歉，你的用户名不存在..</string>
    <string name="tips_password_error">抱歉，你的密码错误..</string>
    <string name="tips_server_error">正方系统暂时登入不上，请尝试在电脑进行网页登入</string>
    <string name="tips_edu_server_error">正方系统暂时登入不上，请尝试在电脑进行网页登入</string>
    <string name="tips">提示</string>
    <string name="tips_loading_classtable">正在加载课程表..</string>
    <string name="tips_loading_params">正在加载条件..第一次加载可能比较慢，请耐心等待.</string>
    <string name="tips_no_allow_so_frequently">亲,刷新太频繁了,休息一会喝杯茶吧.</string>
    <string name="btn_continue">查   询</string>
    <string name="loading_goal">正在加载成绩..</string>
    <string name="tips_goal_null">正方上没有你的考试成绩</string>
    <string name="tips_exam_null">正方上没有你的考试情况</string>
    <string name="tips_pickclassinfo_null">找不到你的选课情况..</string>
    <string name="loading_pickclassinfo">正在加载选课信息..</string>
    <string name="loading_exam">正在加载考试情况..</string>
    <string name="tips_emptyclassroom_null">没有找到你想要的课室..</string>
    <string name="tips_searchbook_null">没有找到你想要的图书窝..</string>
    <string name="loading_seachbook">正在搜索图书..</string>
    <string name="loading_bookdetail">加载图书详细中..</string>
    <string name="tips_bookdetail_null">没有找到你想要的书的馆藏信息窝</string>
    <string name="menu_searchBook">搜索图书</string>
    <string name="menu_nowBorrowedBook">当前借阅</string>
    <string name="menu_pastBorrowedBook">过去借阅</string>
    <string name="menu_lifeinformation">生活资讯</string>
    <string name="loading_borrowedbook">正在查询借阅图书..</string>
    <string name="tips_borrowedbook_null">借阅记录为空</string>
    <string name="loading_default">正在加载..</string>
    <string name="btn_renew">续借</string>
    <string name="loading_renew">正在续借.</string>
    <string name="tips_renew_success">你已续借成功</string>
    <string name="tips_renew_failed">续借失败，已达到续借上限</string>
    <string name="tips_bus_loading_err">校巴加载发生网络错误..</string>
    <string name="loading_bus_route">正在加载站点信息..</string>
    <string name="menu_bus">校巴实时查询</string>
    <string name="tv_login">账号配置</string>
    <string name="tv_username">学号</string>
    <string name="tv_edupassword">教务系统密码</string>
    <string name="tv_libpassword">图书馆密码</string>
    <string name="tv_cardpassword">校园卡密码</string>
    <string name="listitem_lable_goal">成绩：</string>
    <string name="listitem_lable_year">学年：</string>
    <string name="listitem_lable_team">学期：</string>
    <string name="listitem_lable_credit">学分：</string>
    <string name="listitem_lable_grade_point">绩点：</string>
    <string name="listitem_lable_classcode">课程代码：</string>
    <string name="listitem_lable_classify">课程性质：</string>
    <string name="listitem_lable_college_belong">课程归属：</string>
    <string name="listitem_lable_college_hold">开课学院：</string>
    <string name="listitem_lable_restudygoal">重修成绩：</string>
    <string name="tv_gpa">平均绩点：</string>
    <string name="hint_searchbook">请输入你要搜索的图书名</string>
    <string name="listitem_lable_author">作者：</string>
    <string name="listitem_lable_press">出版社：</string>
    <string name="listitem_lable_serial_number">索书号：</string>
    <string name="listitem_lable_bookname">书名：</string>
    <string name="listitem_lable_document_type">文献类型：</string>
    <string name="listitem_lable_book_status">书刊状态：</string>
    <string name="listitem_lable_collection_place">校区—馆藏地：</string>
    <string name="listitem_lable_barcode_number">条码号：</string>
    <string name="listitem_lable_year_title">年卷期：</string>
    <string name="tips_default_last">已经是最后一页</string>
    <string name="tips_searchbook_count">已搜索到书籍数：</string>
    <string name="listitem_lable_borrow_date">借阅日期：</string>
    <string name="listitem_lable_return_date">归还日期：</string>
    <string name="listitem_lable_should_return_date">应还日期：</string>
    <string name="listitem_lable_place">考试地点：</string>
    <string name="listitem_lable_time">考试时间：</string>
    <string name="listitem_lable_seat_number">座位号：</string>
    <string name="listitem_lable_campus">校区：</string>
    <string name="listitem_lable_form">考试形式：</string>
    <string name="listitem_lable_area">建筑面积：</string>
    <string name="listitem_lable_seat_exam">考试座位数：</string>
    <string name="listitem_lable_seat_class">上课座位数：</string>
    <string name="listitem_lable_has_book">预约情况：</string>
    <string name="listitem_lable_type">教室类别：</string>
    <string name="listitem_lable_name_teacher">教师姓名：</string>
    <string name="listitem_lable_hours_week">周学时：</string>
    <string name="listitem_lable_week_range">起始结束周：</string>
    <string name="listitem_lable_class_time">上课时间：</string>
    <string name="listitem_lable_class_place">上课地点：</string>
    <string name="listitem_lable_teaching_material">教材：</string>
    <string name="menu_communityinformation">社区资讯</string>
    <string name="menu_activityinfomation">校园活动</string>
    <string name="menu_guardianserves">家长服务</string>
    <string name="menu_studyinformation">学习资讯</string>
    <string name="menu_busandtelphone">常用电话</string>
    <string name="tips_default_null">没有找到你需要的信息</string>
    <string name="menu_calendar">校历</string>
    <string name="btn_close">关闭</string>
    <string name="tips_calendar_null">今天没啥特别..</string>
    <string name="tips_calendar_click">点击亮色日期可查看事件</string>
    <string name="listitem_lable_class_name">课程名称：</string>
    <string name="menu_refresh_classtable">更新课表</string>
    <string name="book_sys_error">图书馆系统繁忙</string>
    <string name="tips_unknow_error">教务系统繁忙</string>
    <string name="menu_notice">校园通知</string>
    <string name="tips_notice_detail_loading">内容正在加载中..</string>
    <string name="tips_notice_loading">正在加载最新通知..</string>
    <string name="btn_modify">修改</string>
    <string name="listitem_lable_dsz">单双周：</string>
    <string name="listitem_lable_weekday">星期几：</string>
    <string name="listitem_lable_note_start">开始节次：</string>
    <string name="listitem_lable_note_end">结束节次：</string>
    <string name="listitem_lable_week_start">开始周：</string>
    <string name="listitem_lable_week_end">结束周：</string>
    <string name="tips_classtable_modify_note_start_bigger_end">开始节次不能大于结束节次</string>
    <string name="tips_classtable_modify_readerr">读取课程信息发生错误.</string>
    <string name="menu_load_classtable_with_params">智能显示课程</string>
    <string name="menu_load_classtable_with_all">显示全部课程</string>
    <string name="tips_classtable_modify_week_start_bigger_end">开始周不能大于结束周</string>
    <string name="menu_edusys">教务系统</string>
    <string name="menu_lib">图书馆</string>
    <string name="menu_card">校园卡</string>
    <string name="menu_other">其他</string>
    <string name="menu_about">关于</string>
    <string name="menu_back">返回</string>
    <string name="title_params">查询条件</string>
    <string name="title_classtable">课程表</string>
    <string name="title_menu">功能</string>
    <string name="listitem_lable_line">线路</string>
    <string name="listitem_lable_direction">方向</string>
    <string name="tips_bus_loading">正在加载新实时信息..</string>
    <string name="menu_automate_refresh">自动刷新</string>
    <string name="menu_automate_refresh_close">关闭刷新</string>
    <string name="title_borrowedbook">借阅查询</string>
    <string name="title_bus">校巴实时查询</string>
    <string name="title_emptyclassroom">空余教室</string>
    <string name="title_exam">考试安排查询</string>
    <string name="title_goal">查询成绩</string>
    <string name="title_pickclassinfo">已选选修查询</string>
    <string name="menu_exit">退出</string>
    <string name="widget_week_start">第</string>
    <string name="widget_week_end">周</string>
    <string name="title_colorpicker">插件字体颜色及背景设置</string>
    <string name="tips_card_passport_error">抱歉，您的校园卡账号或查询密码错误</string>
    <string name="tips_library_passport_error">抱歉，您的图书馆账号或密码有错误</string>
    <string name="listitem_lable_amount">交易额：</string>
    <string name="listitem_lable_record_time">发生时间：</string>
    <string name="listitem_lable_card_place">地点：</string>
    <string name="listitem_lable_card_type">交易类型：</string>
    <string name="listitem_lable_card_balance">现有余额：</string>
    <string name="listitem_lable_frequency">次数：</string>
    <string name="listitem_lable_card_status">状态：</string>
    <string name="title_card">校园卡查询</string>
    <string name="tips_card_null">没有找到记录..</string>
    <string name="tips_card_record_count">搜索到记录数：</string>
    <string name="listitem_lable_start_date">开始时间</string>
    <string name="listitem_lable_end_date">结束时间</string>
    <string name="hint_card_date">点击设置时间</string>
    <string name="menu_gettoday">今天记录</string>
    <string name="menu_gethistory">历史查询</string>
    <string name="title_sub_card">记录金额：</string>
    <string name="tips_card_date_wrong">日期不能为空，并且开始时间不能大于结束时间</string>
    <string name="menu_add_class">+</string>
    <string name="btn_delete">删除</string>
    <string name="dialog_sure_to_delete_lesson">您确认删除这节课吗？</string>
    <string name="dialog_yes">确认</string>
    <string name="dialog_no">取消</string>
    <string name="menu_account">账号设置</string>
    <string name="total_credit_point">学分绩点之和：</string>
    <string name="tips_main_edusyspassword_not_existed">抱歉，请先配置您的教务系统密码</string>
    <string name="tips_main_libpassword_not_existed">抱歉，图书馆密码尚未设置</string>
    <string name="tips_main_cardpassword_not_existed">抱歉，校园卡密码尚未设置</string>
    <string name="version">Version</string>
    <string name="menu_update">检查更新</string>
    <string name="tips_no_update">暂时没有更新.</string>
    <string name="btn_back">返回</string>
    <string name="tv_special_entrance">已毕业?非本校学生?点此使用体验账号体验</string>
    <string name="tips_forceupdate">注意：本次更新要求您必须升级，如果不更新至最新版本，功能将不稳定或无法使用</string>
    <string name="btn_i_know">我知道鸟</string>
    <string name="title_notification">软件公告</string>
    <string name="listitem_lable_widget_backgroud">背景设置</string>
    <string name="listitem_lable_widget_fontsize">字体大小(倍数)</string>
    <string name="title_configuration">设置</string>
    <string name="tips_save_successfully">保存成功</string>
    <string name="listitem_lable_server">教务系统服务器</string>
    <string name="menu_configuration">软件设置</string>
    <string name="listitem_lable_classTableAsFirstScreen">课程表设为启动界面</string>
    <string name="btn_retry">重试</string>
    <string name="btn_cancel">取消</string>
    <string name="listitem_label_ringerModeDuringClass">上课时情景模式</string>
    <string name="listitem_label_ringerModeAfterClass">下课后情景模式</string>
    <string name="menu_home">功能菜单</string>
    <string name="menu_profile">个人资料</string>
    <string name="menu_settings">软件设置</string>
    <string name="tab_classtable">课表</string>
    <string name="tab_features">功能</string>
    <string name="tab_food">外卖</string>
</resources>