<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_normal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_class_name"/>

            <EditText
                android:id="@+id/edt_classname"
                style="@style/modify_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_name_teacher"/>

            <EditText
                android:id="@+id/edt_teacher"
                style="@style/modify_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_class_place"/>

            <EditText
                android:id="@+id/edt_place"
                style="@style/modify_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_weekday"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_weekday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_dsz"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_dsz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_note_start"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_note_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_note_end"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_note_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_week_start"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_week_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/class_modify_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_week_end"/>

            <antistatic.spinnerwheel.WheelHorizontalView
                android:id="@+id/wheel_week_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center">

        <Button
            android:id="@+id/btn_modify"
            style="@style/noraml_button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/btn_modify"/>
    </LinearLayout>

</LinearLayout>