<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- 课程名称 -->
    <TextView
        android:id="@+id/tv_classname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/goal_item_passed_color"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:text="classname"
        android:textColor="@color/normail_item_passed_text_color"
        android:textSize="@dimen/listitem_textSize"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/listitem_padding"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:paddingRight="@dimen/listitem_title_padding_left"
        android:paddingTop="@dimen/listitem_padding">

        <TableRow>

            <TextView
                android:id="@+id/textView"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_time"/>

            <!-- 考试时间 -->
            <TextView
                android:id="@+id/tv_time"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_lable_goal"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_place"/>

            <!-- 考试地点 -->
            <TextView
                android:id="@+id/tv_place"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow>

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_seat_number"/>

            <!-- 座位号 -->
            <TextView
                android:id="@+id/tv_seat_number"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow>

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_campus"/>

            <!-- 校区 -->
            <TextView
                android:id="@+id/tv_campus"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_lable_goal"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_lable_form"/>

            <!-- 考试形式 -->
            <TextView
                android:id="@+id/tv_form"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>


    </TableLayout>

    <ImageView
        style="@style/listitem_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:contentDescription=""/>

</LinearLayout>